[tool.poetry]
name = "the-card-game-bot"
version = "0.1.0"
description = "Play Well Known Card Games in Discord!"
authors = ["James Miller <32822936+JMTNTBANG@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
parse = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
